tích hợp mobile và web của customer
