# backend/src/modules/bookings/dto/create-booking.dto.ts
@@ -8,6 +8,7 @@ import {
   ValidatorConstraint,
   ValidatorConstraintInterface,
   ValidationArguments,
+  IsOptional,
 } from 'class-validator';
 
 @ValidatorConstraint({ name: 'checkInBeforeCheckOut', async: false })
@@ -72,4 +73,11 @@ export class CreateBookingDto {
   @IsInt()
   @Min(1)
   roomsNeeded = 1;
+
+  @ApiPropertyOptional({ example: 1, description: 'Voucher ID to apply discount' })
+  @Type(() => Number)
+  @IsOptional()
+  @IsInt()
+  @Min(1)
+  voucherId?: number;
 }
